<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ped.bstu.by.contacts.MainActivity">

    <GridLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"
        android:rowCount="9"
        android:columnCount="2">

        <TextView
            android:layout_row="0"
            android:layout_column="0"
            android:id="@+id/textViewName"
            style="@style/TextView"
            android:text="@string/first_name" />

        <EditText
            android:layout_row="0"
            android:layout_column="1"
            android:id="@+id/editTextName"
            style="@style/EditText"
            android:inputType="textPersonName" />

        <TextView
            android:layout_row="1"
            android:layout_column="0"
            android:id="@+id/textViewSurname"
            style="@style/TextView"
            android:text="@string/second_name"
            />

        <EditText
            android:layout_row="1"
            android:layout_column="1"
            android:id="@+id/editTextSurname"
            style="@style/EditText"
            android:inputType="textPersonName" />

        <TextView
            android:layout_row="2"
            android:layout_column="0"
            android:id="@+id/textViewPhone"
            style="@style/TextView"
            android:text="@string/phone"
            />

        <EditText
            android:layout_row="2"
            android:layout_column="1"
            android:id="@+id/editTextPhone"
            style="@style/EditText"
            android:inputType="phone" />

        <TextView
            android:layout_row="3"
            android:layout_column="0"
            android:id="@+id/textViewBirthday"
            style="@style/TextView"
            android:layout_gravity="center_vertical"
            android:text="@string/birthday"
            />

        <LinearLayout
            android:layout_row="3"
            android:layout_column="1"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:id="@+id/textViewDate"
                android:layout_gravity="center_horizontal"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonDate"
                android:onClick="setDate"
                android:text="@string/choose_date"
                />

        </LinearLayout>

        <Button
            android:layout_row="4"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="center_horizontal"
            android:text="@string/add"
            android:id="@+id/buttonAdd"
            android:onClick="onClickAdd"
            />

        <TextView
            android:layout_row="5"
            android:layout_column="0"
            android:layout_gravity="center_vertical"
            android:text="@string/first_name"
            style="@style/TextView"
            />

        <EditText
            android:id="@+id/editTextNameSearch"
            android:layout_row="5"
            android:layout_column="1"
            style="@style/EditText"
            android:layout_gravity="center_vertical"
            android:inputType="textPersonName" />

        <TextView
            android:layout_row="6"
            android:layout_column="0"
            android:text="@string/second_name"
            style="@style/TextView"
            />

        <EditText
            android:id="@+id/editTextSurnameSearch"
            android:layout_row="6"
            android:layout_column="1"
            style="@style/EditText"
            android:inputType="textPersonName" />

        <Button
            android:layout_row="7"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="center_horizontal"
            android:text="@string/search"
            android:id="@+id/buttonSearch"
            android:onClick="onClickSearch"
            />

        <Button
            android:layout_row="8"
            android:layout_columnSpan="2"
            android:layout_gravity="center_horizontal"
            style="@style/SaveFileButton"
            android:onClick="saveFile"
            android:text="@string/save_file"/>

    </GridLayout>
</android.support.constraint.ConstraintLayout>
